<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"

    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill"/>

    </android.support.design.widget.AppBarLayout>



    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/add_friend_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--android:src="@android:drawable/ic_input_add"-->

        <!--/>-->
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_gravity="bottom|end"
        android:id="@+id/setting_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        app:menu_fab_size="normal"
        app:menu_showShadow="true"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_colorNormal="@android:color/holo_blue_bright"
        app:menu_colorPressed="@android:color/holo_blue_bright"
        app:menu_colorRipple="#99FFFFFF"
        app:menu_animationDelayPerItem="50"
        app:menu_icon="@android:drawable/ic_dialog_dialer"
        app:menu_buttonSpacing="0dp"
        app:menu_labels_margin="0dp"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_padding="8dp"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_ellipsize="none"
        app:menu_labels_maxLines="-1"
        app:menu_labels_position="left"
        app:menu_openDirection="up"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_fab_label="Settings">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_friend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_add"
            app:fab_colorNormal="@android:color/holo_blue_bright"
            app:fab_colorPressed="@android:color/holo_blue_bright"
            app:fab_size="mini"
            app:fab_label="Add Friend" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/start_group_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_add"
            app:fab_colorNormal="@android:color/holo_blue_bright"
            app:fab_colorPressed="@android:color/holo_blue_bright"
            app:fab_size="mini"
            app:fab_label="start group chat" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/change_status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_add"
            app:fab_colorNormal="@android:color/holo_blue_bright"
            app:fab_colorPressed="@android:color/holo_blue_bright"
            app:fab_size="mini"
            app:fab_label="change status" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            app:fab_colorNormal="@android:color/holo_blue_bright"
            app:fab_colorPressed="@android:color/holo_blue_bright"

            app:fab_size="mini"
            app:fab_label="Log out" />

    </com.github.clans.fab.FloatingActionMenu>





</android.support.design.widget.CoordinatorLayout>
