<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.magedmilad.chatone.login.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="188dp"
        android:layout_height="168dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/chat_company"
        android:layout_gravity="center"
        android:layout_weight="0.1" />


    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"

        android:padding="12dp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"

        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:onClick="onLoginButtonClick"
        android:text="Login" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"


        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_button_google"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"


        />



    <TextView
        android:id="@+id/signup_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:onClick="onRegistrationButtonClick"
        android:text="New Here? Sign Up"
        android:textSize="16dip" />

</LinearLayout>