...
        app:civ_shadow_color="#8BC34A"
        android:layout_gravity="center"
        android:id="@+id/avater_circular_image_view"
        />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

...
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="onSignupButtonClick"
...
